fixed cropped hidden overflow

--- a/css/elliotkuok.css
+++ b/css/elliotkuok.css
@@ -142,6 +142,10 @@ header {
     width: 100%;
 }
 
+.img-stretch {
+    overflow: hidden;
+}
+
 #landing-page h1 {
     padding-bottom: 0px;
     font-size: 8.25vw;
@@ -169,7 +173,6 @@ header {
     margin: auto;
     text-align:center;
     position:relative;
-    overflow: hidden;
 }
 
 #landing-page #elliot {
